Fix text field overflow

--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,8 @@ body {
     color: white;
     text-align: right;
     font-size: 40px;
-    flex: 1;
+    width: 100%;
+    overflow: hidden;
     padding: 1px 6px;
     border-bottom: 2px dotted #ffed4a;
     margin: auto 2px 0px;
